--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Wasm Test</title>
+    <title>Wasm Test with HTML Log</title>
+    <style>
+        /* Basic styling for the log area */
+        #wasm-log-area {
+            width: 95%; /* Take up most of the width */
+            height: 200px; /* Set a fixed height */
+            border: 1px solid #ccc; /* Add a border */
+            padding: 10px; /* Some padding inside */
+            margin-top: 20px; /* Space above the element */
+            font-family: monospace; /* Use a fixed-width font */
+            white-space: pre-wrap; /* Preserve whitespace and wrap lines */
+            overflow-y: scroll; /* Add a scrollbar if content overflows vertically */
+            resize: vertical; /* Allow vertical resizing */
+        }
+    </style>
 </head>
 <body>
     <h1>WebAssembly Test</h1>
     <p>Check the browser's developer console for output from <code>example.js</code>.</p>
-    <p>You can also test by typing <code>await window.runWasmAddition(5, 6)</code> in the console.</p>
+    <p>WASM output from <code>fd_write</code> also appears below:</p>
+
+    <textarea id="wasm-log-area" readonly></textarea>
+
+    <p>You can also test by typing <code>await window.runWasmAddition(5, 6)</code> in the browser console.</p>
+
     <script src="example.js"></script>
 </body>
 </html>
