--- a/g.html
+++ b/g.html
@@ -394,7 +394,7 @@
 
             function onMouseMove(e) {
                 yaw -= e.movementX * 0.002;
-                pitch += e.movementY * 0.002;
+                pitch -= e.movementY * 0.002;
                 pitch = Math.max(-Math.PI / 2 + 0.01, Math.min(Math.PI / 2 - 0.01, pitch));
             }
 
