--- a/gm_simple.html
+++ b/gm_simple.html
@@ -6,10 +6,41 @@
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
+        #crosshair {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 20px;
+            height: 20px;
+            pointer-events: none;
+            z-index: 1000;
+        }
+        #crosshair::before,
+        #crosshair::after {
+            content: '';
+            position: absolute;
+            background: rgba(255, 255, 255, 0.8);
+        }
+        #crosshair::before {
+            left: 50%;
+            top: 0;
+            width: 2px;
+            height: 100%;
+            transform: translateX(-50%);
+        }
+        #crosshair::after {
+            top: 50%;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            transform: translateY(-50%);
+        }
     </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <div id="crosshair"></div>
     <script type="module">
         // Test with single colored triangle to verify basic setup
         async function init() {
@@ -28,26 +59,72 @@
             const format = navigator.gpu.getPreferredCanvasFormat();
             context.configure({ device, format });
 
-            // Simple floor quad using indices - smaller, centered at origin
-            const positions = new Float32Array([
-                // 4 vertices for a quad (2x2 square)
-                -1, 0, -1,    // v0: bottom-left
-                1, 0, -1,     // v1: bottom-right
-                -1, 0, 1,     // v2: top-left
-                1, 0, 1       // v3: top-right
-            ]);
+            // Build geometry: floor + 4 walls
+            const wallHeight = 2.0;
+            const positionsArray = [];
+            const uvsArray = [];
+            const surfaceTypeArray = []; // 0=floor, 1=wall
+            const indicesArray = [];
+            let indexOffset = 0;
 
-            const uvs = new Float32Array([
-                0, 0,       // v0
-                1, 0,       // v1
-                0, 1,       // v2
-                1, 1        // v3
-            ]);
+            // Floor quad (2x2 at y=0)
+            positionsArray.push(
+                -1, 0, -1,  1, 0, -1,  -1, 0, 1,  1, 0, 1
+            );
+            uvsArray.push(0, 0,  1, 0,  0, 1,  1, 1);
+            surfaceTypeArray.push(0, 0, 0, 0); // floor
+            indicesArray.push(0, 1, 2,  1, 3, 2);
+            indexOffset = 4;
 
-            const indices = new Uint16Array([
-                0, 1, 2,    // First triangle
-                1, 3, 2     // Second triangle
-            ]);
+            // North wall (z = -1) - facing inward (+Z direction)
+            positionsArray.push(
+                1, 0, -1,  -1, 0, -1,  1, wallHeight, -1,  -1, wallHeight, -1
+            );
+            uvsArray.push(0, 0,  1, 0,  0, 1,  1, 1);
+            surfaceTypeArray.push(1, 1, 1, 1); // wall
+            indicesArray.push(indexOffset, indexOffset+1, indexOffset+2,  indexOffset+1, indexOffset+3, indexOffset+2);
+            indexOffset += 4;
+
+            // South wall (z = 1) - facing inward (-Z direction)
+            positionsArray.push(
+                -1, 0, 1,  1, 0, 1,  -1, wallHeight, 1,  1, wallHeight, 1
+            );
+            uvsArray.push(0, 0,  1, 0,  0, 1,  1, 1);
+            surfaceTypeArray.push(1, 1, 1, 1); // wall
+            indicesArray.push(indexOffset, indexOffset+1, indexOffset+2,  indexOffset+1, indexOffset+3, indexOffset+2);
+            indexOffset += 4;
+
+            // West wall (x = -1) - facing inward (+X direction)
+            positionsArray.push(
+                -1, 0, 1,  -1, 0, -1,  -1, wallHeight, 1,  -1, wallHeight, -1
+            );
+            uvsArray.push(0, 0,  1, 0,  0, 1,  1, 1);
+            surfaceTypeArray.push(1, 1, 1, 1); // wall
+            indicesArray.push(indexOffset, indexOffset+1, indexOffset+2,  indexOffset+1, indexOffset+3, indexOffset+2);
+            indexOffset += 4;
+
+            // East wall (x = 1) - facing inward (-X direction)
+            positionsArray.push(
+                1, 0, -1,  1, 0, 1,  1, wallHeight, -1,  1, wallHeight, 1
+            );
+            uvsArray.push(0, 0,  1, 0,  0, 1,  1, 1);
+            surfaceTypeArray.push(1, 1, 1, 1); // wall
+            indicesArray.push(indexOffset, indexOffset+1, indexOffset+2,  indexOffset+1, indexOffset+3, indexOffset+2);
+            indexOffset += 4;
+
+            // Ceiling quad (2x2 at y=wallHeight, facing downward)
+            positionsArray.push(
+                -1, wallHeight, -1,  1, wallHeight, -1,  -1, wallHeight, 1,  1, wallHeight, 1
+            );
+            uvsArray.push(0, 0,  1, 0,  0, 1,  1, 1);
+            surfaceTypeArray.push(2, 2, 2, 2); // ceiling
+            indicesArray.push(indexOffset, indexOffset+2, indexOffset+1,  indexOffset+1, indexOffset+2, indexOffset+3);
+            indexOffset += 4;
+
+            const positions = new Float32Array(positionsArray);
+            const uvs = new Float32Array(uvsArray);
+            const surfaceTypes = new Float32Array(surfaceTypeArray);
+            const indices = new Uint16Array(indicesArray);
 
             const positionBuffer = device.createBuffer({
                 size: positions.byteLength,
@@ -64,6 +141,14 @@
             });
             new Float32Array(uvBuffer.getMappedRange()).set(uvs);
             uvBuffer.unmap();
+
+            const surfaceTypeBuffer = device.createBuffer({
+                size: surfaceTypes.byteLength,
+                usage: GPUBufferUsage.VERTEX,
+                mappedAtCreation: true
+            });
+            new Float32Array(surfaceTypeBuffer.getMappedRange()).set(surfaceTypes);
+            surfaceTypeBuffer.unmap();
 
             const indexBuffer = device.createBuffer({
                 size: indices.byteLength,
@@ -98,11 +183,14 @@
                 struct VertexOutput {
                     @builtin(position) clipPos: vec4<f32>,
                     @location(0) uv: vec2<f32>,
+                    @location(1) surfaceType: f32,
+                    @location(2) viewDist: f32,
                 };
 
                 @vertex fn vs_main(
                     @location(0) position: vec3<f32>,
-                    @location(1) uv: vec2<f32>
+                    @location(1) uv: vec2<f32>,
+                    @location(2) surfaceType: f32
                 ) -> VertexOutput {
                     var output: VertexOutput;
 
@@ -126,6 +214,9 @@
                     let viewY = dy * cp - rotZ * sp;
                     let viewZ = dy * sp + rotZ * cp;
 
+                    // Calculate distance from camera for fog
+                    let viewDist = sqrt(viewX * viewX + viewY * viewY + viewZ * viewZ);
+
                     // Perspective divide
                     let aspect = u.viewWidth / u.viewHeight;
                     let f = tan(u.fov * 0.5);
@@ -141,6 +232,8 @@
                     }
 
                     output.uv = uv;
+                    output.surfaceType = surfaceType;
+                    output.viewDist = viewDist;
                     return output;
                 }
             `;
@@ -149,6 +242,8 @@
                 struct VertexOutput {
                     @builtin(position) clipPos: vec4<f32>,
                     @location(0) uv: vec2<f32>,
+                    @location(1) surfaceType: f32,
+                    @location(2) viewDist: f32,
                 };
 
                 @fragment fn fs_main(in: VertexOutput) -> @location(0) vec4<f32> {
@@ -158,9 +253,28 @@
                     let checker = (i32(checkerU) + i32(checkerV)) & 1;
                     let checkerFactor = select(0.7, 1.0, checker == 0);
 
-                    // Blue floor with checkerboard
-                    let baseColor = vec4<f32>(0.0, 0.0, 1.0, 1.0);
-                    return baseColor * checkerFactor;
+                    // Different colors based on surface type
+                    var baseColor: vec4<f32>;
+                    if (in.surfaceType > 1.5) {
+                        // Ceiling
+                        baseColor = vec4<f32>(0.0, 1.0, 0.0, 1.0); // Green ceiling
+                    } else if (in.surfaceType > 0.5) {
+                        // Wall
+                        baseColor = vec4<f32>(1.0, 0.0, 0.0, 1.0); // Red walls
+                    } else {
+                        // Floor
+                        baseColor = vec4<f32>(0.0, 0.0, 1.0, 1.0); // Blue floor
+                    }
+
+                    let surfaceColor = baseColor * checkerFactor;
+
+                    // Apply fog
+                    let fogColor = vec4<f32>(0.5, 0.7, 1.0, 1.0); // Light blue fog (matches clear color)
+                    let fogStart = 0.5;
+                    let fogEnd = 3.0;
+                    let fogFactor = clamp((fogEnd - in.viewDist) / (fogEnd - fogStart), 0.0, 1.0);
+
+                    return mix(fogColor, surfaceColor, fogFactor);
                 }
             `;
 
@@ -204,6 +318,10 @@
                         {
                             arrayStride: 8,
                             attributes: [{ shaderLocation: 1, offset: 0, format: 'float32x2' }]
+                        },
+                        {
+                            arrayStride: 4,
+                            attributes: [{ shaderLocation: 2, offset: 0, format: 'float32' }]
                         }
                     ]
                 },
@@ -212,7 +330,7 @@
                     entryPoint: 'fs_main',
                     targets: [{ format }]
                 },
-                primitive: { topology: 'triangle-list', cullMode: 'none' }
+                primitive: { topology: 'triangle-list', cullMode: 'none' }  // No culling
             });
 
             console.log('Pipeline created with explicit layout');
@@ -234,10 +352,54 @@
             console.log('Indices:', indices);
             console.log('UVs:', uvs);
 
-            // Camera setup - looking straight down at the floor
+            // Camera setup - inside the box
             let yaw = 0;
-            let pitch = -Math.PI / 2 + 0.1; // Almost straight down
-            const cameraPos = [0, 3, 0]; // 3 units above the 2x2 floor
+            let pitch = 0;
+            const cameraPos = [0, 1.0, 0];
+            const moveSpeed = 0.05;
+            const keys = {};
+
+            // Keyboard controls
+            document.addEventListener('keydown', (e) => { keys[e.key.toLowerCase()] = true; });
+            document.addEventListener('keyup', (e) => { keys[e.key.toLowerCase()] = false; });
+
+            // Mouse controls
+            canvas.addEventListener('click', () => canvas.requestPointerLock());
+            document.addEventListener('pointerlockchange', () => {
+                if (document.pointerLockElement === canvas) {
+                    document.addEventListener('mousemove', onMouseMove);
+                } else {
+                    document.removeEventListener('mousemove', onMouseMove);
+                }
+            });
+
+            function onMouseMove(e) {
+                yaw += e.movementX * 0.002;
+                pitch -= e.movementY * 0.002;
+                pitch = Math.max(-Math.PI / 2 + 0.01, Math.min(Math.PI / 2 - 0.01, pitch));
+            }
+
+            function updateCamera() {
+                const cy = Math.cos(yaw);
+                const sy = Math.sin(yaw);
+
+                if (keys['w']) {
+                    cameraPos[0] += cy * moveSpeed;
+                    cameraPos[2] += sy * moveSpeed;
+                }
+                if (keys['s']) {
+                    cameraPos[0] -= cy * moveSpeed;
+                    cameraPos[2] -= sy * moveSpeed;
+                }
+                if (keys['a']) {
+                    cameraPos[0] += sy * moveSpeed;
+                    cameraPos[2] -= cy * moveSpeed;
+                }
+                if (keys['d']) {
+                    cameraPos[0] -= sy * moveSpeed;
+                    cameraPos[2] += cy * moveSpeed;
+                }
+            }
 
             function perspective(fov, aspect, near, far) {
                 const f = 1.0 / Math.tan(fov / 2);
@@ -294,6 +456,8 @@
 
             let frameCount = 0;
             function render() {
+                updateCamera();
+
                 // Update uniforms
                 const data = new Float32Array(8);
                 data[0] = cameraPos[0];
@@ -309,7 +473,7 @@
 
                 if (frameCount < 1) {
                     console.log('Camera:', cameraPos, 'yaw:', yaw.toFixed(2), 'pitch:', pitch.toFixed(2));
-                    console.log('Floor is at y=0, camera at y=5, looking down');
+                    console.log('Total vertices:', positions.length / 3, 'indices:', indices.length);
                 }
 
                 const encoder = device.createCommandEncoder();
@@ -329,12 +493,13 @@
                 }
                 pass.setVertexBuffer(0, positionBuffer);
                 pass.setVertexBuffer(1, uvBuffer);
+                pass.setVertexBuffer(2, surfaceTypeBuffer);
                 pass.setIndexBuffer(indexBuffer, 'uint16');
-                pass.drawIndexed(6); // 6 indices = 2 triangles
+                pass.drawIndexed(indices.length); // Draw all indices
                 pass.end();
 
                 if (frameCount < 2) {
-                    console.log('Frame', frameCount, 'drawing 6 indices');
+                    console.log('Frame', frameCount, 'drawing', indices.length, 'indices');
                 }
 
                 device.queue.submit([encoder.finish()]);
