--- a/gm.html
+++ b/gm.html
@@ -13,62 +13,6 @@
     <canvas id="canvas"></canvas>
     <canvas id="textCanvas"></canvas>
     <script type="module">
-        // Math utilities for matrices
-        function mat4() {
-            return new Float32Array(16).fill(0).map((_, i) => i % 5 === 0 ? 1 : 0);
-        }
-
-        function perspective(fov, aspect, near, far) {
-            const f = 1.0 / Math.tan(fov / 2);
-            const nf = 1 / (near - far);
-            const m = mat4();
-            m[0] = f / aspect;
-            m[5] = f;
-            m[10] = (far + near) * nf;
-            m[11] = -1;
-            m[14] = (2 * far * near) * nf;
-            return m;
-        }
-
-        function lookAt(eye, target, up) {
-            const z = normalize(sub(eye, target));
-            const x = normalize(cross(up, z));
-            const y = cross(z, x);
-            const m = mat4();
-            m[0] = x[0]; m[1] = y[0]; m[2] = z[0];
-            m[4] = x[1]; m[5] = y[1]; m[6] = z[1];
-            m[8] = x[2]; m[9] = y[2]; m[10] = z[2];
-            m[12] = -dot(x, eye); m[13] = -dot(y, eye); m[14] = -dot(z, eye);
-            return m;
-        }
-
-        function multiply(a, b) {
-            const c = mat4();
-            for (let i = 0; i < 4; i++) {
-                for (let j = 0; j < 4; j++) {
-                    for (let k = 0; k < 4; k++) {
-                        c[i * 4 + j] += a[i * 4 + k] * b[k * 4 + j];
-                    }
-                }
-            }
-            return c;
-        }
-
-        function vec3(x, y, z) { return new Float32Array([x, y, z]); }
-        function sub(a, b) { return vec3(a[0] - b[0], a[1] - b[1], a[2] - b[2]); }
-        function cross(a, b) {
-            return vec3(
-                a[1] * b[2] - a[2] * b[1],
-                a[2] * b[0] - a[0] * b[2],
-                a[0] * b[1] - a[1] * b[0]
-            );
-        }
-        function dot(a, b) { return a[0] * b[0] + a[1] * b[1] + a[2] * b[2]; }
-        function normalize(v) {
-            const len = Math.sqrt(dot(v, v));
-            return len > 0 ? vec3(v[0] / len, v[1] / len, v[2] / len) : v;
-        }
-
         async function init() {
             const canvas = document.getElementById('canvas');
             const textCanvas = document.getElementById('textCanvas');
@@ -130,6 +74,7 @@
             // Generate meshes
             const positions = [];
             const uvs = [];
+            const surfaceTypes = []; // 0=floor, 1=wall, 2=ceiling
             const indices = [];
             let indexOffset = 0;
 
@@ -144,6 +89,7 @@
             ];
             positions.push(...floorPositions);
             uvs.push(...floorUVs);
+            surfaceTypes.push(0, 0, 0, 0); // floor
             indices.push(indexOffset, indexOffset + 1, indexOffset + 2, indexOffset + 1, indexOffset + 3, indexOffset + 2);
             indexOffset += 4;
 
@@ -155,6 +101,7 @@
             const ceilingUVs = floorUVs; // Same tiling
             positions.push(...ceilingPositions);
             uvs.push(...ceilingUVs);
+            surfaceTypes.push(2, 2, 2, 2); // ceiling
             indices.push(indexOffset, indexOffset + 1, indexOffset + 2, indexOffset + 1, indexOffset + 3, indexOffset + 2);
             indexOffset += 4;
 
@@ -175,6 +122,7 @@
                             ];
                             positions.push(...wallPositions);
                             uvs.push(...wallUVs);
+                            surfaceTypes.push(1, 1, 1, 1); // wall
                             indices.push(indexOffset, indexOffset + 1, indexOffset + 2, indexOffset + 1, indexOffset + 3, indexOffset + 2);
                             indexOffset += 4;
                         }
@@ -190,6 +138,7 @@
                             ];
                             positions.push(...wallPositions);
                             uvs.push(...wallUVs);
+                            surfaceTypes.push(1, 1, 1, 1); // wall
                             indices.push(indexOffset, indexOffset + 1, indexOffset + 2, indexOffset + 1, indexOffset + 3, indexOffset + 2);
                             indexOffset += 4;
                         }
@@ -205,6 +154,7 @@
                             ];
                             positions.push(...wallPositions);
                             uvs.push(...wallUVs);
+                            surfaceTypes.push(1, 1, 1, 1); // wall
                             indices.push(indexOffset, indexOffset + 1, indexOffset + 2, indexOffset + 1, indexOffset + 3, indexOffset + 2);
                             indexOffset += 4;
                         }
@@ -220,6 +170,7 @@
                             ];
                             positions.push(...wallPositions);
                             uvs.push(...wallUVs);
+                            surfaceTypes.push(1, 1, 1, 1); // wall
                             indices.push(indexOffset, indexOffset + 1, indexOffset + 2, indexOffset + 1, indexOffset + 3, indexOffset + 2);
                             indexOffset += 4;
                         }
@@ -244,6 +195,14 @@
             new Float32Array(uvBuffer.getMappedRange()).set(uvs);
             uvBuffer.unmap();
 
+            const surfaceTypeBuffer = device.createBuffer({
+                size: surfaceTypes.length * 4,
+                usage: GPUBufferUsage.VERTEX,
+                mappedAtCreation: true
+            });
+            new Float32Array(surfaceTypeBuffer.getMappedRange()).set(surfaceTypes);
+            surfaceTypeBuffer.unmap();
+
             const indexBuffer = device.createBuffer({
                 size: indices.length * 2,
                 usage: GPUBufferUsage.INDEX,
@@ -252,45 +211,96 @@
             new Uint16Array(indexBuffer.getMappedRange()).set(indices);
             indexBuffer.unmap();
 
-            // Uniform buffer for matrices and camera
+            // Uniform buffer - use individual floats to avoid vec/matrix alignment issues
+            // Layout: cameraPosX, cameraPosY, cameraPosZ, yaw, pitch, fov, viewWidth, viewHeight
             const uniformBuffer = device.createBuffer({
-                size: 80, // viewProj (64) + cameraPos (12) + padding (4)
+                size: 32, // 8 floats * 4 bytes
                 usage: GPUBufferUsage.UNIFORM | GPUBufferUsage.COPY_DST
             });
 
             // Shaders
             const vsSource = `
                 struct Uniforms {
-                    viewProj: mat4x4<f32>,
-                    cameraPos: vec3<f32>,
-                    padding: f32,
+                    cameraPosX: f32,
+                    cameraPosY: f32,
+                    cameraPosZ: f32,
+                    yaw: f32,
+                    pitch: f32,
+                    fov: f32,
+                    viewWidth: f32,
+                    viewHeight: f32,
                 };
                 @group(0) @binding(0) var<uniform> u: Uniforms;
-                struct VertexInput {
-                    @location(0) position: vec3<f32>,
-                    @location(1) uv: vec2<f32>,
-                };
+
                 struct VertexOutput {
                     @builtin(position) clipPos: vec4<f32>,
                     @location(0) worldPos: vec3<f32>,
-                    @location(1) uv: vec2<f32>,
-                    @location(2) isWall: f32,
+                    @location(1) surfaceType: f32,
+                    @location(2) viewDist: f32,
                 };
-                @vertex fn vs_main(in: VertexInput) -> VertexOutput {
-                    var out: VertexOutput;
-                    out.clipPos = u.viewProj * vec4<f32>(in.position, 1.0);
-                    out.worldPos = in.position;
-                    out.uv = in.uv;
-                    out.isWall = 0.0; // Set per instance or uniform; here assume all walls for simplicity, detect by y
-                    return out;
+
+                @vertex fn vs_main(
+                    @location(0) position: vec3<f32>,
+                    @location(1) uv: vec2<f32>,
+                    @location(2) surfaceType: f32
+                ) -> VertexOutput {
+                    var output: VertexOutput;
+
+                    // Transform to camera space
+                    let cy = cos(u.yaw);
+                    let sy = sin(u.yaw);
+                    let cp = cos(u.pitch);
+                    let sp = sin(u.pitch);
+
+                    // Position relative to camera
+                    let dx = position.x - u.cameraPosX;
+                    let dy = position.y - u.cameraPosY;
+                    let dz = position.z - u.cameraPosZ;
+
+                    // Transform to view space
+                    // Forward direction is (cos(yaw), 0, sin(yaw)) in world space
+                    // Right direction is (-sin(yaw), 0, cos(yaw)) in world space
+                    let viewX = -dx * sy + dz * cy;
+                    let viewZ_noPitch = dx * cy + dz * sy;
+
+                    // Rotate by pitch (around X axis in view space)
+                    let viewY = dy * cp - viewZ_noPitch * sp;
+                    let viewZ = dy * sp + viewZ_noPitch * cp;
+
+                    // Calculate distance from camera for fog
+                    let viewDist = sqrt(viewX * viewX + viewY * viewY + viewZ * viewZ);
+
+                    // Perspective projection
+                    let aspect = u.viewWidth / u.viewHeight;
+                    let f = tan(u.fov * 0.5);
+                    let near = 0.01;
+                    let far = 100.0;
+
+                    // Output clip-space coordinates (before perspective divide)
+                    // Let GPU handle perspective divide by setting w = viewZ
+                    let clipX = viewX / (f * aspect);
+                    let clipY = viewY / f;
+                    let clipZ = ((far + near) * viewZ - 2.0 * far * near) / (far - near);
+                    let clipW = viewZ;
+
+                    output.clipPos = vec4<f32>(clipX, clipY, clipZ, clipW);
+                    output.worldPos = position;
+                    output.surfaceType = surfaceType;
+                    output.viewDist = viewDist;
+                    return output;
                 }
             `;
 
             const fsSource = `
                 struct Uniforms {
-                    viewProj: mat4x4<f32>,
-                    cameraPos: vec3<f32>,
-                    padding: f32,
+                    cameraPosX: f32,
+                    cameraPosY: f32,
+                    cameraPosZ: f32,
+                    yaw: f32,
+                    pitch: f32,
+                    fov: f32,
+                    viewWidth: f32,
+                    viewHeight: f32,
                 };
                 @group(0) @binding(0) var<uniform> u: Uniforms;
                 @group(0) @binding(1) var s: sampler;
@@ -298,58 +308,82 @@
                 struct VertexOutput {
                     @builtin(position) clipPos: vec4<f32>,
                     @location(0) worldPos: vec3<f32>,
-                    @location(1) uv: vec2<f32>,
-                    @location(2) isWall: f32,
+                    @location(1) surfaceType: f32,
+                    @location(2) viewDist: f32,
                 };
 
                 @fragment fn fs_main(in: VertexOutput) -> @location(0) vec4<f32> {
-                    let dist = length(in.worldPos - u.cameraPos);
-                    let isWall = in.worldPos.y > 0.01 && in.worldPos.y < 1.99; // Detect wall vs floor/ceiling
-                    let isFloor = in.worldPos.y < 0.01;
-                    let isCeiling = in.worldPos.y > 1.99;
+                    // Calculate perspective-correct UVs from world position
+                    var texU: f32;
+                    var texV: f32;
 
-                    var baseColor: vec4<f32>;
-                    if (isWall) {
-                        baseColor = vec4<f32>(1.0, 0.0, 0.0, 1.0); // Red
-                    } else if (isFloor) {
-                        baseColor = vec4<f32>(0.0, 0.0, 1.0, 1.0); // Blue
+                    if (in.surfaceType > 1.5) {
+                        // Ceiling (surfaceType = 2)
+                        texU = fract(in.worldPos.x);
+                        texV = fract(in.worldPos.z);
+                    } else if (in.surfaceType > 0.5) {
+                        // Wall (surfaceType = 1)
+                        // Determine which wall by checking which coordinate is closer to boundary
+                        let absX = abs(in.worldPos.x);
+                        let absZ = abs(in.worldPos.z);
+                        if (absX > absZ) {
+                            // East or West wall (x-aligned)
+                            texU = fract(in.worldPos.z);
+                        } else {
+                            // North or South wall (z-aligned)
+                            texU = fract(in.worldPos.x);
+                        }
+                        texV = in.worldPos.y / 2.0; // wallHeight = 2.0
                     } else {
-                        baseColor = vec4<f32>(1.0, 1.0, 0.0, 1.0); // Yellow
+                        // Floor (surfaceType = 0)
+                        texU = fract(in.worldPos.x);
+                        texV = fract(in.worldPos.z);
                     }
 
-                    // Checkerboard
-                    let checkerU = floor(in.uv.x);
-                    let checkerV = floor(in.uv.y);
+                    // Checkerboard pattern (4x4 per unit)
+                    let checkerU = floor(texU * 4.0);
+                    let checkerV = floor(texV * 4.0);
                     let checker = (i32(checkerU) + i32(checkerV)) & 1;
                     let checkerFactor = select(0.7, 1.0, checker == 0);
+
+                    // Different colors based on surface type (matching g.html)
+                    var baseColor: vec4<f32>;
+                    if (in.surfaceType > 1.5) {
+                        // Ceiling
+                        baseColor = vec4<f32>(1.0, 1.0, 0.0, 1.0); // Yellow ceiling
+                    } else if (in.surfaceType > 0.5) {
+                        // Wall
+                        baseColor = vec4<f32>(1.0, 0.0, 0.0, 1.0); // Red walls
+                    } else {
+                        // Floor
+                        baseColor = vec4<f32>(0.0, 0.0, 1.0, 1.0); // Blue floor
+                    }
+
                     var color = baseColor * checkerFactor;
 
-                    // Fog
-                    let factor = exp2(-dist * 0.05);
+                    // Distance fog (exp2 like g.html)
+                    let factor = exp2(-in.viewDist * 0.05);
                     color.r *= factor;
                     color.g *= factor;
                     color.b *= factor;
 
-                    // Crosshair (fullscreen logic)
-                    let aspect = 1920.0 / 1080.0; // Assume 1080p; adjust if needed
-                    let centerX = 960.0;
-                    let centerY = 540.0;
+                    // Draw crosshair (like g.html)
+                    let fragCoord = in.clipPos;
+                    let centerX = u.viewWidth * 0.5;
+                    let centerY = u.viewHeight * 0.5;
                     let crosshairSize = 10.0;
                     let crosshairThickness = 2.0;
-                    let dx = abs(in.clipPos.x - centerX);
-                    let dy = abs(in.clipPos.y - centerY);
+                    let dx = abs(fragCoord.x - centerX);
+                    let dy = abs(fragCoord.y - centerY);
 
                     if ((dx < crosshairThickness && dy < crosshairSize) ||
                         (dy < crosshairThickness && dx < crosshairSize)) {
+                        // Crosshair color: white with black outline for visibility
                         if (dx < 1.0 || dy < 1.0) {
                             color = vec4<f32>(1.0, 1.0, 1.0, 1.0);
                         } else {
                             color = vec4<f32>(0.0, 0.0, 0.0, 1.0);
                         }
-                    }
-
-                    if (dist > 100.0) {
-                        discard; // Or return sky, but for meshes, skybox separate if needed
                     }
 
                     return color;
@@ -380,6 +414,10 @@
                         {
                             arrayStride: 8, // vec2<f32>
                             attributes: [{ shaderLocation: 1, offset: 0, format: 'float32x2' }]
+                        },
+                        {
+                            arrayStride: 4, // f32 surfaceType
+                            attributes: [{ shaderLocation: 2, offset: 0, format: 'float32' }]
                         }
                     ]
                 },
@@ -389,7 +427,8 @@
                     targets: [{ format }]
                 },
                 primitive: {
-                    topology: 'triangle-list'
+                    topology: 'triangle-list',
+                    cullMode: 'none'  // No backface culling
                 },
                 depthStencil: {
                     depthWriteEnabled: true,
@@ -494,24 +533,16 @@
                     fpsUpdateTime = currentTime;
                 }
 
-                // Matrices
-                const aspect = canvas.width / canvas.height;
-                const proj = perspective(fov, aspect, 0.1, 100.0);
-                const target = vec3(
-                    cameraPos.x + Math.cos(yaw) * Math.cos(pitch),
-                    cameraPos.y + Math.sin(pitch),
-                    cameraPos.z + Math.sin(yaw) * Math.cos(pitch)
-                );
-                const up = vec3(0, 1, 0); // Adjust if pitch extreme
-                const view = lookAt(vec3(cameraPos.x, cameraPos.y, cameraPos.z), target, up);
-                const viewProj = multiply(proj, view);
-
-                const data = new Float32Array(20); // 80 bytes
-                data.set(viewProj); // 0-15
-                data[16] = cameraPos.x;
-                data[17] = cameraPos.y;
-                data[18] = cameraPos.z;
-                // 19 padding
+                // Update uniforms with individual floats
+                const data = new Float32Array(8);
+                data[0] = cameraPos.x;       // cameraPosX
+                data[1] = cameraPos.y;       // cameraPosY
+                data[2] = cameraPos.z;       // cameraPosZ
+                data[3] = yaw;
+                data[4] = pitch;
+                data[5] = fov;
+                data[6] = canvas.width;      // viewWidth
+                data[7] = canvas.height;     // viewHeight
 
                 device.queue.writeBuffer(uniformBuffer, 0, data);
 
@@ -537,6 +568,7 @@
                 renderPass.setBindGroup(0, bindGroup);
                 renderPass.setVertexBuffer(0, positionBuffer);
                 renderPass.setVertexBuffer(1, uvBuffer);
+                renderPass.setVertexBuffer(2, surfaceTypeBuffer);
                 renderPass.setIndexBuffer(indexBuffer, 'uint16');
                 renderPass.drawIndexed(indices.length);
                 renderPass.end();
